# Raon-Speech

./: README.md  pyproject.toml  requirements.txt
demo/: gradio_demo.py  gradio_duplex_demo.py  run_gradio_demo.sh  run_gradio_duplex_demo.sh
demo/realtime/api/: app.py
demo/realtime/runtime/: session.py
scripts/: duplex_infer.sh  duplex_train.sh  export.sh  infer.sh  train.sh
src/raon/: duplex_generate.py  pipeline.py
